--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63cf88">  <td>22/09/30 21:31:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRMTests.loginLogout()[pri:0, instance:hrmdatabase.OrangeHRMTests@550dbc7a]">loginLogout</td> 
-  <td>TestNG-test=Test-1@1158676965</td>   <td></td> </tr>
-<tr bgcolor="917cb2">  <td>22/09/30 21:31:41</td>   <td>-6183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:hrmdatabase.OrangeHRMTests@550dbc7a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1158676965</td>   <td></td> </tr>
-<tr bgcolor="917cb2">  <td>22/09/30 21:32:03</td>   <td>16218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:hrmdatabase.OrangeHRMTests@550dbc7a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1158676965</td>   <td></td> </tr>
+<tr bgcolor="69759b">  <td>22/10/12 12:23:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTests.loginLogout(java.lang.String,java.lang.String)[pri:0, instance:com.tmb.tests.HomepageTests@7c24b813]">loginLogout</td> 
+  <td>TestNG-PoolService-0@237075121</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/10/12 12:23:22</td>   <td>-7819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.tmb.tests.HomepageTests@7c24b813]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@237075121</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>22/10/12 12:23:44</td>   <td>14629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tmb.tests.HomepageTests@7c24b813]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@237075121</td>   <td></td> </tr>
 </table>
